vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__array_type_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type int_arr_2d_t is array (natural range <>, integer range <>) of positive;\",)"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'int_arr_2d_t'
  Keyword(Is)
  UnboundedArrayDefinition
    Keyword(Array)
    LeftPar
    IndexSubtypeDefinitionList
      IndexSubtypeDefinition
        Name
          NameDesignatorPrefix
            Identifier 'natural'
        Keyword(Range)
        BOX
      Comma
      IndexSubtypeDefinition
        Name
          NameDesignatorPrefix
            Identifier 'integer'
        Keyword(Range)
        BOX
    RightPar
    Keyword(Of)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'positive'
  SemiColon
