vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__array_type_declaration_with_discrete_range.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type constrained_int_arr is array (0 to 1) of positive;\",)"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'constrained_int_arr'
  Keyword(Is)
  ConstrainedArrayDefinition
    Keyword(Array)
    IndexConstraint
      LeftPar
      ExpressionList
        BinaryExpression
          LiteralExpression
            AbstractLiteral '0'
          Keyword(To)
          LiteralExpression
            AbstractLiteral '1'
      RightPar
    Keyword(Of)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'positive'
  SemiColon
