vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__parse_array_type_definition_with_discrete_subtype_definition.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type foo is array (natural) of boolean;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'foo'
  Keyword(Is)
  ConstrainedArrayDefinition
    Keyword(Array)
    IndexConstraint
      LeftPar
      ExpressionList
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'natural'
      RightPar
    Keyword(Of)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'boolean'
  SemiColon
