vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__parse_array_type_definition_with_range_attribute_name.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type foo is array (arr_t'range) of boolean;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'foo'
  Keyword(Is)
  ConstrainedArrayDefinition
    Keyword(Array)
    IndexConstraint
      LeftPar
      ExpressionList
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'arr_t'
            AttributeName
              Tick
              Keyword(Range)
      RightPar
    Keyword(Of)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'boolean'
  SemiColon
