vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__record_type_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type rec_t is record state: enum_t; end record;\",)"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'rec_t'
  Keyword(Is)
  RecordTypeDefinition
    RecordTypeDefinitionPreamble
      Keyword(Record)
    RecordElementDeclarations
      ElementDeclaration
        IdentifierList
          Identifier 'state'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'enum_t'
        SemiColon
    RecordTypeDefinitionEpilogue
      Keyword(End)
      Keyword(Record)
  SemiColon
