vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__composite_types__tests__record_type_declaration.snap
---
source: vhdl_syntax/src/parser/productions/composite_types.rs
expression: "to_test_text(Parser::type_declaration, \"type rec_t is record end record;\",)"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'rec_t'
  Keyword(Is)
  RecordTypeDefinition
    Keyword(Record)
    Keyword(End)
    Keyword(Record)
  SemiColon
